--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,6 @@ dependencies {
     implementation 'com.github.parse-community.Parse-SDK-Android:parse:1.18.5'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.8.1'
     implementation 'com.android.support:design:28.0.0'
+
+    implementation 'com.loopj.android:android-async-http:1.4.9'
 }
