--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.example.fitness_app"
-        minSdkVersion 15
+        minSdkVersion 26
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -32,5 +32,9 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:3.8.1'
     implementation 'com.android.support:design:28.0.0'
 
+    //for http requests
     implementation 'com.loopj.android:android-async-http:1.4.9'
+
+    //for notifications
+    implementation 'com.android.support:support-v4:28.0.0'
 }
